            - New routine hash(), which uses the tight encoding.
            - New routines dot() and writeDot().
            - New alias sig(), which is is identical to isoSig().
            - Extended translate() to support top-dimensional simplices (not
              just lower-dimensional faces), and added a variant of translate()
              that takes face embeddings instead of faces.
            - Renamed dumpConstruction() to source(), and extended it to produce
              either C++ and Python code via an optional language argument.
              The old C++-only dumpConstruction() is kept but deprecated.
            - Added a variant of insertTriangulation() that takes an rvalue
              reference (alongside the original which takes a const reference).
            - The two-argument copy constructor is now a three-argument
              copy constructor, giving an additional boolean option for
              whether to clone simplex/facet locks.
            - Replaced makeDoubleCover() with doubleCover(), which returns the
              result as a new triangulation.  The old routine is kept but
              deprecated.
            - Renamed simplifiedFundamentalGroup to setGroupPresentation().
              The old name is deprecated but kept for backwards compatibility.
            - Overhaul of the internal change span classes, including a new
              inner class ChangeAndClearSpan.
            - The requirements for the encoding template parameter for isoSig()
              have changed.  In particular, its encode() function must now
              take an extra argument describing simplex and/or facet locks.
        Class Triangulation<3>:
            - Regarding elementary moves:
              + The (check, perform) variants of fourFourMove(), twoOneMove(),
                zeroTwoMove(), openBook(), closeBook(), collapseEdge() are all
                deprecated.  You should now call these routines _without_ extra